Removed unnecessary large files

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# Ignore environment variables
+
+.env.local
+.env.development
+.env.production
+
